--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ main {
     grid-row: 2;
     display: grid;
     grid-template-rows: repeat(6,max-content);
+    grid-template-columns: 100%;
     gap: 8vh;
 }
 
@@ -36,6 +37,7 @@ nav {
     background-color: #B6562A;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 
 /*Styling Logo*/
@@ -413,7 +415,7 @@ footer small {
 
 /*Styling for Up Icon that will stay on the bottom right corner*/
 #Arrow img {
-    width: 2.5vw;
+    width: 3.5vw;
     margin-bottom: .5vw;
 }
 
@@ -423,8 +425,8 @@ footer small {
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    width: 4vw;
-    height: 4vw;
+    width: 5.5vw;
+    height: 5.5vw;
     position:fixed;
     bottom: 1vw;
     right: 1vw;
@@ -441,4 +443,318 @@ footer small {
     left:25%;
     z-index: -1;
     opacity: 0.5;
+}
+
+/*Screen for 768px-1024px*/
+@media screen and (max-width:1024px) {
+    body {
+        background-color: pink;
+    }
+
+    nav ul {
+    margin-right: 1vw;
+    width: 60vw;
+    }
+
+    /*Hero Image with CTA*/
+    #hero {
+        height: 80vh;
+    }
+
+    /*Timer*/
+
+    #CTA {
+        height: 60vh;
+        width: 80vw;
+        border-radius: 10px;
+    }
+
+    h1 {
+        font-weight: 500;
+        font-size: 1.9rem;
+        margin-bottom: 1rem;
+    }
+
+    .countdown-container {
+        gap: 3vw;
+    }
+
+    .time-box {
+        padding: 5vh 2vw;
+        min-width: 10vw;
+    }
+
+    .time {
+        font-size: 3.5rem;
+        font-weight: 600;
+    }
+
+    .label {
+        font-size: 0.9rem;
+    }
+
+    /*Styling the CTA "button"*/
+    #CTA > a {
+        font-size:x-large;
+        font-weight: 500;
+        margin-top: 7vh;
+        padding: 2vh 10vw;
+        border-radius: 5px;
+    }
+
+    #CTA > a:hover {
+        font-size: 1.6rem;
+    }
+
+    #detail3 {
+        padding-top: 8%;
+    }
+
+    /*Register and Volunteer forms Section*/
+    #register,
+    #volunteer {
+        margin: 0 10%;
+    }
+
+    #register,
+    #contact,
+    #volunteer {
+        border-radius: 10px;
+        border: solid 3px black
+    }
+
+    #register h2,
+    #volunteer h2,
+    #contact h2 {
+        margin: 5vh 0;
+    }
+
+    .formrow,
+    .contactrow {
+        flex-wrap: wrap;
+        margin-bottom: 6vh;
+    }
+
+    .formvert2 {
+        width: 47%;
+    }
+
+    .formvert1 {
+        width: 47%;
+    }
+
+    .formvert1:last-of-type {
+        width: 100%;
+        margin-top: 6vh;
+    }
+
+    .formvert {
+        width:80%;
+    }
+
+    #vsubmit,
+    #csubmit {
+        margin-top: 8%;
+        margin-bottom: 10vh;
+    }
+
+    /*Styling for Up Icon that will stay on the bottom right corner*/
+    #Arrow img {
+        width: 7vw;
+        margin-bottom: 1vw;
+    }
+
+    #Arrow {
+        width: 10vw;
+        height: 10vw;
+        bottom: 1vw;
+        right: 1vw;
+    }
+
+    /*Turkey background*/
+    #BackTurkey {
+        width: 50vw;
+        top:6%;
+        left:25%;
+        z-index: -1;
+        opacity: 0.5;
+    }
+}
+
+/*Screen for 576px-768px*/
+@media screen and (max-width:768px) {
+    body {
+        background-color: lightblue;
+    }
+
+    nav ul {
+    margin-right: 1vw;
+    width: 70vw;
+    }
+
+    /*Hero Image with CTA*/
+    #hero {
+        height: 68vh;
+    }
+
+    /*Timer*/
+    #CTA {
+        height: 52vh;
+        width: 85vw;
+        border-radius: 10px;
+    }
+
+    h1 {
+        font-weight: 500;
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+    }
+
+    .countdown-container {
+        gap: 2vw;
+    }
+
+    .time-box {
+        padding: 5vh 3vw;
+        min-width: 10vw;
+    }
+
+    .time {
+        font-size: 3rem;
+    }
+
+    .label {
+        font-size: 0.9rem;
+    }
+
+    /*Styling the CTA "button"*/
+    #CTA > a {
+        font-size:x-large;
+        font-weight: 500;
+        margin-top: 5vh;
+        padding: 2vh 20vw;
+    }
+
+    #CTA > a:hover {
+        font-size: 1.6rem;
+    }
+
+    /*Details Section*/
+    #detail {
+        grid-template-columns: 1fr 10fr 1fr;
+        grid-template-rows: repeat(4, max-content);
+    }
+
+    #detail h2 {
+        grid-area: 1 / 2 / 2 / 3;
+        margin-block: 0;
+        padding-top: 5vh;
+        padding-bottom: 2vh;;
+    }
+
+    #detail1,
+    #detail2, 
+    #detail3 {
+        padding: 8% 10%;
+        border: solid 5px black;
+        border-top: 0;
+    }
+
+    #detail1 {
+        grid-area: 2/2/3/3;
+        border-bottom-left-radius: 0px;
+    }
+
+    #detail2 {
+        grid-area: 3/2/4/3;
+    }
+
+    #detail2 li {
+        padding: 3% 0;
+    }
+
+    #detail3 {
+        grid-area: 4/2/5/3;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        padding-top: 4%;
+    }
+
+    /*Register and Volunteer forms Section*/
+    #register h2,
+    #volunteer h2,
+    #contact h2 {
+        margin: 5vh 0;
+    }
+
+    .formrow,
+    .contactrow {
+        flex-wrap: wrap;
+        margin-bottom: 0vh;
+    }
+
+    .formvert1,
+    .formvert2 {
+        width: 100%;
+        margin-bottom: 4vh;
+    }
+
+    .formvert1:last-of-type {
+        margin-top: 0vh;
+    }
+
+    #vsubmit,
+    #csubmit {
+        margin-top: 8%;
+        margin-bottom: 10vh;
+    }
+
+    /*Styling Contact*/
+    .contactrow .formvert {
+        width: 100%;
+        margin-bottom: 4vh;
+    }
+
+    /*Turkey Trot image*/
+    aside img {
+        height: 48vh;
+        border-radius: 5px;
+    }
+
+    /*Styling for Up Icon that will stay on the bottom right corner*/
+    #Arrow img {
+        width: 7vw;
+        margin-bottom: 1vw;
+    }
+
+    #Arrow {
+        width: 10vw;
+        height: 10vw;
+        bottom: 1vw;
+        right: 1vw;
+    }
+
+    /*Turkey background*/
+    #BackTurkey {
+        width: 70vw;
+        top:6%;
+        left:15%;
+        z-index: -1;
+        opacity: 0.5;
+    }
+}
+
+@media screen and (max-width:576px) {
+    body {
+        background-color: lightgreen;
+    }
+
+    nav ul {
+    margin-right: 1vw;
+    width: 85vw;
+    }
+
+    nav > a p {
+        display: none;
+    }
 }
