--- a/styles.css
+++ b/styles.css
@@ -447,24 +447,21 @@ footer small {
 
 /*Screen for 768px-1024px*/
 @media screen and (max-width:1024px) {
-    body {
-        background-color: pink;
-    }
 
     nav ul {
     margin-right: 1vw;
-    width: 60vw;
+    width: 80vw;
     }
 
     /*Hero Image with CTA*/
     #hero {
-        height: 80vh;
+        height: 50vh;
     }
 
     /*Timer*/
 
     #CTA {
-        height: 60vh;
+        height: 40vh;
         width: 80vw;
         border-radius: 10px;
     }
@@ -497,7 +494,7 @@ footer small {
     #CTA > a {
         font-size:x-large;
         font-weight: 500;
-        margin-top: 7vh;
+        margin-top: 4vh;
         padding: 2vh 10vw;
         border-radius: 5px;
     }
@@ -588,13 +585,13 @@ footer small {
 
 /*Screen for 576px-768px*/
 @media screen and (max-width:768px) {
-    body {
-        background-color: lightblue;
-    }
-
     nav ul {
     margin-right: 1vw;
     width: 70vw;
+    }
+
+    nav li a {
+        padding: 1vh 0vw;
     }
 
     /*Hero Image with CTA*/
@@ -745,13 +742,13 @@ footer small {
 
 /*Screen size below 576px*/
 @media screen and (max-width:576px) {
-    body {
-        background-color: lightgreen;
-    }
-
     nav ul {
     margin-right: 1vw;
-    width: 85vw;
+    width: 90vw;
+    }
+
+    nav li a {
+        padding: 1vh 0vw;
     }
 
     nav > a p {
@@ -760,19 +757,19 @@ footer small {
 
         /*Hero Image with CTA*/
     #hero {
-        height: 68vh;
+        height: 45vh;
     }
 
     /*Timer*/
     #CTA {
-        height: 52vh;
-        width: 85vw;
+        height: 35vh;
+        width: 90vw;
         border-radius: 10px;
     }
 
     h1 {
         font-weight: 500;
-        font-size: 1.4rem;
+        font-size: 1rem;
         margin-bottom: 1rem;
     }
 
@@ -781,21 +778,21 @@ footer small {
     }
 
     .time-box {
-        padding: 5vh 3vw;
-        min-width: 10vw;
+        padding: 4vh 3vw;
+        min-width: 5vw;
     }
 
     .time {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 
     .label {
-        font-size: 0.9rem;
+        font-size: 0.7rem;
     }
 
     /*Styling the CTA "button"*/
     #CTA > a {
-        font-size:x-large;
+        font-size: large;
         font-weight: 500;
         margin-top: 5vh;
         padding: 2vh 20vw;
@@ -895,8 +892,8 @@ footer small {
     #Arrow {
         width: 10vw;
         height: 10vw;
-        bottom: 1vw;
-        right: 1vw;
+        bottom: 3vw;
+        right: 3vw;
     }
 
     /*Turkey background*/
